--- a/diverse2015.tex
+++ b/diverse2015.tex
@@ -35,11 +35,11 @@ In this paper we present our contribution to the MediaEval 2015 Retrieving Diver
 
 When a potential tourist makes an image search for a place, she expects to get a diverse and relevant visual result as a summary of the different views of the location. 
 
-In the official challenge (Retrieving Diverse Social Images at MediaEval 2015: Challenge, Dataset and Evaluation)~\cite{Task2015} a ranked list of location photos retrieved from Flickr is given, and the task is to refine the result by providing a set of images that are both relevant and provide a diversified summary. An extended explanation for each metric referred in this paper can be found in the task description paper \cite{Task2015}. The diversity means that images can illustrate different views of the location at different times of the day/year and under different weather conditions, creative views, etc. The utility score of the refinement process can be measured using the precision and diversity metric~\cite{Taneva2010}. 
+In the official challenge (Retrieving Diverse Social Images at MediaEval 2015)~\cite{Task2015} a ranked list of location photos retrieved from Flickr is given, and the task is to refine the result by providing a set of images that are both relevant and provide a diversified summary. An extended explanation for the task objectives, provided dataset and evaluation metrics can be found in the task description paper \cite{Task2015}. The diversity means that images can illustrate different views of the location at different times of the day/year and under different weather conditions, creative views, etc. The utility score of the refinement process can be measured using the precision and diversity metric~\cite{Taneva2010}. 
 
-Our team participated in previous challenges~\cite{szHucs2013bmemtm,Paroczi2014}, each year we experimented with a different approach. In 2013 we used diversification of initial results using clustering, but our solution was focused on diversification only. In 2014 we tried to focus on relevance and diversity with the same importance as a new idea.
+Our team participated in previous challenges~\cite{szHucs2013bmemtm,Paroczi2014}, each year we experimented with a different approach. In 2013 we used diversification of initial results using clustering, but our solution was focused on diversification only~\cite{szHucs2013bmemtm}. In 2014 we tried to focus on relevance and diversity with the same importance as a new idea~\cite{Paroczi2014}.
 
-In the past we treated our feature vectors (calculated values from metrics) as an $N$ dimensional continuous space with eucledian coordinates. In this paper we will define a hand crafted distance matrices with non-eucledian coordinates, which can be used during the clustering. 
+In the previous approaches to the task we treated our feature vectors (calculated values from metrics) as an $N$ dimensional continuous space with Euclidean coordinates. In this year apporach we will define a set of hand crafted distance matrices with non-Euclidean coordinates, which can be used during the clustering. 
 
 \section{Runs}
 
