--- a/diverse2015.tex
+++ b/diverse2015.tex
@@ -83,9 +83,9 @@ In the third run both visual and textual descriptors could be used to create the
 We used our visual distance matrix $F$ (see Section \ref{run1}) and text distance matrix $G$ (see Section \ref{run2}) and created a new aggregate matrix $H$. This matrix is simply the sum of the corresponding values from both $F$ and $G$ matrix. We tried different kind of weighting methods, but the pure matrices supplied the best results on the devset.
 
 \subsection{Run4: Credibility based re-ranking}
-In the fourth run participants were provided with credibility descriptors detailed in \cite{Task2015}.
+In the fourth run participants were provided with credibility descriptors \cite{Task2015}.
 
-Using the original result we filtered the images by users who had $faceProportion$ more than $1.3$ to create the same effect as we did with the $FACE$ metric. With the purpose of increase the diversity we used the $locationSimilarity$ metric, if this value exceeds the threshold of $3.0$ we exluded the image. Despite our simple approach we had great results on the devset.
+Using the original result we filtered the images by users who had $faceProportion$ more than $1.3$ to create the same effect as we did with the $FACE$ metric. With the purpose of increasing the diversity we used the $locationSimilarity$ metric, if this value exceeds the threshold of $3.0$ we excluded the image. Despite our simple approach we had great results on the devset.
 
 \section{Results and Conclusion}
 
