--- a/diverse2015.tex
+++ b/diverse2015.tex
@@ -114,7 +114,7 @@ Using the original result we filtered the images by users who had $faceProportio
 	\hline
 \end{tabular}
 \label{table:results}
-\caption{Average results of each run}
+\caption{Official results on the test data.}
 \end{table}
 
 \begin{figure}[h]
