result figure1 caption

--- a/diverse2015.tex
+++ b/diverse2015.tex
@@ -119,7 +119,7 @@ Using the original result we filtered the images by users who had $faceProportio
 
 \begin{figure}[h]
 \includegraphics[width=1.0\linewidth]{f1}
-\caption{F1@N results}
+\caption{Official runs F1-score metric for various cutoff points (results of test data).}
 \label{fig:f1}
 \end{figure}
 
