--- a/sigproc.bib
+++ b/sigproc.bib
@@ -27,8 +27,8 @@
 
 @InProceedings{Task2015,
   Title                    = {Retrieving Diverse Social Images at MediaEval 2015: Challenge, Dataset and Evaluation},
-  Author                   = {Ionescu, B. and Popescu, A. and Lupu, A. and Ginsca, A.L. and M{\"u}ller, H.},
-  Booktitle                = {Proceedings of the MediaEval 2015 Multimedia Benchmark Workshop},
+  Author                   = {Ionescu, B., Ginsca, A.L., Boteanu, B., Popescu, A., Lupu, M., M{\"u}ller, H.},
+  Booktitle                = {Working Notes Proceedings of the MediaEval 2015 Workshop, Wurzen, Germany, September 14-15, CEUR WS.org},
   Year                     = {2015},
 
   __markedentry            = {[hidden:6]},
@@ -78,7 +78,7 @@
 @InProceedings{Ng01onspectral,
   Title                    = {On Spectral Clustering: Analysis and an algorithm},
   Author                   = {Andrew Y. Ng and Michael I. Jordan and Yair Weiss},
-  Booktitle                = {ADVANCES IN NEURAL INFORMATION PROCESSING SYSTEMS },
+  Booktitle                = {Advances in neural information processing systems},
   Year                     = {2001},
   Pages                    = {849--856},
   Publisher                = {MIT Press}
