--- a/diverse2015.tex
+++ b/diverse2015.tex
@@ -35,7 +35,7 @@ In this paper we present our contribution to the MediaEval 2015 Retrieving Diver
 
 When a potential tourist makes an image search for a place, she expects to get a diverse and relevant visual result as a summary of the different views of the location. 
 
-In the official challenge (Retrieving Diverse Social Images at MediaEval 2015)~\cite{Task2015} a ranked list of location photos retrieved from Flickr is given, and the task is to refine the result by providing a set of images that are both relevant and provide a diversified summary. An extended explanation for the task objectives, provided dataset and evaluation metrics can be found in the task description paper \cite{Task2015}. The diversity means that images can illustrate different views of the location at different times of the day/year and under different weather conditions, creative views, etc. The utility score of the refinement process can be measured using the precision and diversity metric~\cite{Taneva2010}. 
+In the official challenge (Retrieving Diverse Social Images at MediaEval 2015)~\cite{Task2015} a ranked list of location photos retrieved from Flickr is given, and the task is to refine the result by providing a set of images that are both relevant and provide a diversified summary. An extended explanation for the task objectives, provided dataset and evaluation descriptors can be found in the task description paper \cite{Task2015}. The diversity means that images can illustrate different views of the location at different times of the day/year and under different weather conditions, creative views, etc. The utility score of the refinement process can be measured using the precision and diversity metric~\cite{Taneva2010}. 
 
 Our team participated in previous challenges~\cite{szHucs2013bmemtm,Paroczi2014}, each year we experimented with a different approach. In 2013 we used diversification of initial results using clustering, but our solution was focused on diversification only~\cite{szHucs2013bmemtm}. In 2014 we tried to focus on relevance and diversity with the same importance as a new idea~\cite{Paroczi2014}.
 
@@ -44,12 +44,18 @@ In the previous approaches to the task we treated our feature vectors (calculate
 \section{Runs}
 
 \subsection{Run1: Visual based re-ranking}\label{run1}
-In the first run participants could use only visual based metrics or own metrics calculated using only the images.
+In the first run participants could use only visual based descriptors or own descriptors calculated using only the images.
 
-Our main approach was using color based distances~\cite{Datta2008,Paramita2010} and filtering photos with faces~\cite{szHucs2013bmemtm,Paroczi2014}. We experimented with HOG feature distances but did not achieve any additional improvement.
+Our main approach was using color based distances~\cite{Datta2008,Paramita2010} and filtering photos with faces~\cite{szHucs2013bmemtm,Paroczi2014}. We used two of the descriptors provided by the organizers~\cite{Task2015}:
+\begin{description}
+	\item[CM] Global Color Moments on HSV Color Space: represent the first three central moments of an image color distribution: mean, standard deviation and skewness
+	\item [CN] Global Color Naming Histogram: maps colors to 11 universal color names: "black", "blue", "brown", "grey", "green", "orange", "pink", "purple", "red", "white", and "yellow"
+\end{description}
 
-First we calculated a new metric for each image: the $FACE$ metric is the ratio of the calculated area occupied by the possible face regions on an image and whole
-image area~\cite{szHucs2013bmemtm}. Then we used the $CN$ metric to filter out black color based images, since mostly dark images tend to have less colors and those are mainly shifted into the gray range rather than having bright colors.
+We experimented with HOG feature distances but did not achieve any additional improvement.
+
+First we calculated a new descriptor for each image: the $FACE$ descriptor is the ratio of the calculated area occupied by the possible face regions on an image and whole
+image area~\cite{szHucs2013bmemtm}. Then we used the $CN$ descriptor to filter out black color based images, since mostly dark images tend to have less colors and those are mainly shifted into the gray range rather than having bright colors.
 
 In the reordering step we started from the original result. We did our initial filtering by putting images to the end of the result list where $FACE>0$ or $CN[0]>0.8$, the first value in $CN$ corresponds to the color black.
 
@@ -85,7 +91,7 @@ We used our visual distance matrix $F$ (see Section \ref{run1}) and text distanc
 \subsection{Run4: Credibility based re-ranking}
 In the fourth run participants were provided with credibility descriptors \cite{Task2015}.
 
-Using the original result we filtered the images by users who had $faceProportion$ more than $1.3$ to create the same effect as we did with the $FACE$ metric. With the purpose of increasing the diversity we used the $locationSimilarity$ metric, if this value exceeds the threshold of $3.0$ we excluded the image. Despite our simple approach we had great results on the devset.
+Using the original result we filtered the images by users who had $faceProportion$ more than $1.3$ to create the same effect as we did with the $FACE$ descriptor. With the purpose of increasing the diversity we used the $locationSimilarity$ descriptor, if this value exceeds the threshold of $3.0$ we excluded the image. Despite our simple approach we had great results on the devset.
 
 \section{Results and Conclusion}
 
