--- a/sigproc.bib
+++ b/sigproc.bib
@@ -28,7 +28,7 @@
 @InProceedings{Task2015,
   Title                    = {Retrieving Diverse Social Images at MediaEval 2015: Challenge, Dataset and Evaluation},
   Author                   = {Ionescu, B. and Ginsca, A. L. and Boteanu, B. and Popescu, A. and Lupu, M. and M{\"u}ller, H.},
-  Booktitle                = {Working Notes Proceedings of the MediaEval 2015 Workshop, Wurzen, Germany, September 14-15, CEUR WS.org},
+  Booktitle                = {Working Notes Proceedings of the MediaEval 2015 Workshop, Wurzen, Germany, September 14-15, CEUR-WS.org},
   Year                     = {2015},
 
   __markedentry            = {[hidden:6]},
